Fix horizontal scrolling on iPhone

--- a/assets/stylesheets/home.css.scss
+++ b/assets/stylesheets/home.css.scss
@@ -160,6 +160,9 @@
   .panel-booster {
     margin: 20px 50px;
   }
+  .ribbon {
+    display: none;
+  }
 }
 
 @media screen and (max-width: $screen-sm-min) {
